Try to solve TODO
